--- a/appCorredores/src/app/screen/login/login.component.html
+++ b/appCorredores/src/app/screen/login/login.component.html
@@ -4,41 +4,14 @@
             <img src="./assets/tenis.png" alt="" width="100" height="100" style="padding: 20px;">
             <h1><b>Login</b></h1>
         </div>
-        <form action="" class="formularioLogin">
-
-            <div class="div_inputs">
-                <div>
-                    <label for=""><b>Nombre</b></label>
-                </div>            
-                <div>
-                    <input class="form__field" type="text" name="" id="" >
-                </div>
-            </div>
-
-            <div class="div_inputs">
-                <div>
-                    <label for=""><b>Nombre Usuario</b></label>
-                </div>            
-                <div>
-                    <input class="form__field" type="text" name="" id="">
-                </div>        
-            </div>
-
-            <div class="div_inputs">
-                <div>
-                    <label for=""><b>Edad</b></label>
-                </div>
-                <div>
-                    <input class="form__field" type="number" name="" id="">
-                </div>
-            </div>       
+        <form action="" class="formularioLogin">            
 
             <div class="div_inputs">
                 <div>
                     <label for=""><b>Correo</b></label>
                 </div>
                 <div>
-                    <input class="form__field" type="email" name="" id="">
+                    <input class="form__field" type="email" name="">
                 </div>
             </div>
 
@@ -47,17 +20,14 @@
                     <label for=""><b>Contraseña</b></label>
                 </div>
                 <div>
-                    <input class="form__field" type="password" name="" id="">
+                    <input class="form__field" type="password" name="">
                 </div>
             </div>     
 
-            <div class="div_inputs">
-                <div>
-                    <label for=""><b>Repite tu contraseña</b></label>
-                </div>
-                <div>
-                    <input class="form__field" type="password" name="" id="">
-                </div>
+            <div style="text-align: center;">                
+                <input type="checkbox" name="" id="">
+                <p>Aceptar <a href="">Terminos y condiciones</a></p>
+                
             </div>            
 
 
