--- a/appCorredores/src/app/screen/login/login.component.css
+++ b/appCorredores/src/app/screen/login/login.component.css
@@ -32,7 +32,7 @@
 
 @media only screen and (max-width: 700px)
 {
-  .form__field{
+  .formularioLogin{
     margin: 0px;
     padding-left: 0px;
     padding-right: 0px
