--- a/appCorredores/src/app/screen/login/login.component.html
+++ b/appCorredores/src/app/screen/login/login.component.html
@@ -26,7 +26,7 @@
 
             <div style="text-align: center;">                
                 <input type="checkbox" name="" id="">
-                <p>Aceptar <a href="">Terminos y condiciones</a></p>
+                <p>Recuerdame</p>
                 
             </div>            
 
