--- a/appCorredores/src/app/screen/productos/productos.component.html
+++ b/appCorredores/src/app/screen/productos/productos.component.html
@@ -24,7 +24,7 @@
                 <div class="cursos-datos">
                   <div class="datosCursoUno">
                     <h3>Tenis para correr</h3>
-                    <p><a href="">Ver Producto</a></p>                        
+                    <p><a style="color: rgb(9, 121, 219);" (click)="verProducto(1)">Ver Producto</a></p>                        
                   </div>                                                                          
                 </div>
               </div>  
