--- a/appCorredores/src/app/screen/registro/registro.component.html
+++ b/appCorredores/src/app/screen/registro/registro.component.html
@@ -60,6 +60,12 @@
                 </div>
             </div>            
 
+            <div style="text-align: center;">                
+                <input type="checkbox" name="" id="">
+                <p>Aceptar <a (click)="redirectTerminos()" style="color:#0353e7">Terminos y condiciones</a></p>
+                
+            </div>  
+
 
             <div style="margin: 30px; display: block; text-align: center;">
                 <input type="button" value="Iniciar sesion" style="
