--- a/appCorredores/src/app/screen/producto-id/producto-id.component.css
+++ b/appCorredores/src/app/screen/producto-id/producto-id.component.css
@@ -13,6 +13,9 @@
    display: block;
   }
   .imagneproducto{
-    text-align: center;
+    text-align: center;    
+  }
+  .iamgen{
+    max-width: 100%;
   }
 }
