--- a/appCorredores/src/app/screen/producto-id/producto-id.component.html
+++ b/appCorredores/src/app/screen/producto-id/producto-id.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="contenedorProducto">
         <div class="imagneproducto" >
-            <img src="https://imgs.search.brave.com/7ulQ6DMKlJM69veuBtDmKyQCvKcT6LHMBcSNQKLb9eI/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9jb250/ZW50cy5tZWRpYWRl/Y2F0aGxvbi5jb20v/cDIzOTM4ODAvayQy/MjE4Mjc2YjY2Yjdl/MTQ3YzZjZDUzMzIz/ZmIxMzFlNC90ZW5p/cy1kZS1ydW5uaW5n/LWhvbWJyZS1qb2dm/bG93LTEwMDEtbmVn/cm8tZ3Jpcy5qcGc_/Zm9ybWF0PWF1dG8m/cXVhbGl0eT00MCZm/PTUyMHg1MjA" alt="" style="border-radius: 30px;">
+            <img class="iamgen" src="https://imgs.search.brave.com/7ulQ6DMKlJM69veuBtDmKyQCvKcT6LHMBcSNQKLb9eI/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9jb250/ZW50cy5tZWRpYWRl/Y2F0aGxvbi5jb20v/cDIzOTM4ODAvayQy/MjE4Mjc2YjY2Yjdl/MTQ3YzZjZDUzMzIz/ZmIxMzFlNC90ZW5p/cy1kZS1ydW5uaW5n/LWhvbWJyZS1qb2dm/bG93LTEwMDEtbmVn/cm8tZ3Jpcy5qcGc_/Zm9ybWF0PWF1dG8m/cXVhbGl0eT00MCZm/PTUyMHg1MjA" alt="" style="border-radius: 30px;">
         </div>
         <div>
             <div style="padding: 6px;">
