--- a/appCorredores/src/app/screen/sobre-nosotros/sobre-nosotros.component.html
+++ b/appCorredores/src/app/screen/sobre-nosotros/sobre-nosotros.component.html
@@ -28,7 +28,7 @@
     </div>
 
     <div>
-        <b>IMPORTANTE:</b> https://corredores.vercel.app/home funciona como una entidad separada a las tiendas de autoservicio FIX, por lo que toda compra realizada a través de la tienda en-línea Fixferreterias.com será únicamente válida para entregas a domicilio. Por el momento las compras realizadas en Fixferreterias.com NO podrán ser recolectadas en las tiendas de autoservicio FIX, y de la misma manera, las compras realizadas en las tiendas de autoservicio FIX, no pueden ser enviadas a domicilio. El servicio de Fixferreterias.com es exclusivo para envíos a domicilio.
+        <b>IMPORTANTE:</b> https://corredores.vercel.app/home funciona como una entidad separada a las tiendas de autoservicio FIX, por lo que toda compra realizada a través de la tienda en-línea https://corredores.vercel.app/home será únicamente válida para entregas a domicilio. Por el momento las compras realizadas en https://corredores.vercel.app/home NO podrán ser recolectadas en las tiendas de autoservicio FIX, y de la misma manera, las compras realizadas en las tiendas de autoservicio FIX, no pueden ser enviadas a domicilio. El servicio de https://corredores.vercel.app/home es exclusivo para envíos a domicilio.
 
     </div>
 
